syntax = "proto3";

package fixBug;

// 表生成services服务类和rpc方法描述
option cc_generic_services = true;

message BaseResponse {
  int32 errcode = 1;
  bytes errmsg = 2;
}

// 定义登陆请求消息类型  name pwd
message LoginRequest {
  bytes name = 1;
  bytes pwd = 2;
}

// 定义登陆响应消息类型
message LoginResponse {
  BaseResponse base = 1;
  bool success = 2;
}

message GetFriendListsRequest {
  uint32 userID = 1;
}

message User {
  bytes name = 1;
  uint32 age = 2;
  enum Male {
    MAN = 0;
    WOMAN = 1;
  }
  Male male = 3;
}

message GetFriendListsResponse {
  BaseResponse base = 1;
  repeated User friendList = 2;
}


service UserServiceRpc {
  rpc Login(LoginRequest) returns(LoginResponse);
  rpc GetFriendLists(GetFriendListsRequest) returns(GetFriendListsResponse);
}